--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "keywords": [
     "broccoli-plugin",
     "css",
-    "postcss"
+    "postcss",
+    "postcssrunner"
   ],
   "author": "Jeff Jewiss <jeffjewiss@gmail.com>",
   "license": "MIT",
