--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
   "homepage": "https://github.com/jeffjewiss/broccoli-postcss",
   "dependencies": {
     "broccoli-caching-writer": "^0.5.5",
+    "broccoli-filter": "^0.1.14",
     "mkdirp": "^0.5.0",
     "postcss": "^4.1.9"
   },
   "devDependencies": {
-    "postcss-pseudoelements": "^2.1.1",
-    "broccoli": "^0.15.3",
-    "mocha": "*"
+    "broccoli": "^0.16.2",
+    "mocha": "*",
+    "postcss-pseudoelements": "^2.1.1"
   }
 }
